refactor(hibernate): add DialectResolver for newer Hibernate versions
- Introduces the recommended DialectResolver integration pattern required by latest Hibernate.

test(container): improve Kubling test container

- Minor adjustments to improve correctness.

chore(tests): replace guava with commons-io

- Removes unnecessary deprecated Guava dependency from Core tests.